try catch for when dev does not copy the Config template to Config

--- a/FlaskLearnREST2loOr3lo.ipynb
+++ b/FlaskLearnREST2loOr3lo.ipynb
@@ -29,7 +29,10 @@
    "source": [
     "#This cell demonstrates a simple Flask app that makes a REST call to Learn.\n",
     "from bbrest import BbRest\n",
-    "import Config\n",
+    "try:\n",
+    "    import Config\n",
+    "except ModuleNotFoundError:\n",
+    "    print(\"Config module not found. Did you copy Config_template.py to Config.py and set values?\")\n",
     "from flask import Flask\n",
     "\n",
     "bb = BbRest(Config.config['key'], Config.config['secret'], Config.config['url'])\n",
@@ -77,28 +80,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "97fd4778-63e5-4ebb-9f8f-860ea653bc08",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello\n",
-      "in 25 minutes\n",
-      "{'id': '_7_1', 'uuid': '4cdad5559fb84f44beeb889e0093b1c8', 'externalId': 'mkauffman-student', 'dataSourceId': '_2_1', 'userName': 'mkauffman-student', 'studentId': 'mkauffman-student', 'educationLevel': 'Unknown', 'gender': 'Unknown', 'created': '2024-01-09T16:31:34.745Z', 'modified': '2024-01-09T22:24:42.951Z', 'lastLogin': '2024-01-09T22:24:42.949Z', 'institutionRoleIds': ['STUDENT'], 'systemRoleIds': ['User'], 'availability': {'available': 'Yes'}, 'name': {'given': 'Mark (Student)', 'family': 'Kauffman', 'preferredDisplayName': 'GivenName'}, 'contact': {'email': 'markkauffman2000@gmail.com'}, 'avatar': {'viewUrl': 'https://kauffmantest390082.ddns.net/learn/api/public/v1/users/_7_1/avatar', 'source': 'Default'}}\n",
-      "\n",
-      "\n",
-      "{'id': '_6_1', 'uuid': '038db44f29144f548e1ce2163b533cb0', 'externalId': 'mkauffman', 'dataSourceId': '_2_1', 'userName': 'mkauffman', 'studentId': 'mkauffman', 'educationLevel': 'Unknown', 'gender': 'Unknown', 'created': '2024-01-04T19:00:05.777Z', 'modified': '2024-02-19T21:09:11.135Z', 'lastLogin': '2024-02-19T21:09:11.134Z', 'institutionRoleIds': ['STUDENT'], 'systemRoleIds': ['SystemAdmin'], 'availability': {'available': 'Yes'}, 'name': {'given': 'Mark', 'family': 'Kauffman', 'preferredDisplayName': 'GivenName'}, 'contact': {'email': 'mark.kauffman@anthology.com'}, 'avatar': {'viewUrl': 'https://kauffmantest390082.ddns.net/learn/api/public/v1/users/_6_1/avatar', 'source': 'Default'}}\n"
+      "Config module not found. Did you copy Config_template.py to Config.py and set values?\n",
+      "hello\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'Config' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 9\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhello\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mbbrest\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m BbRest\n\u001b[0;32m----> 9\u001b[0m bb \u001b[38;5;241m=\u001b[39m BbRest(\u001b[43mConfig\u001b[49m\u001b[38;5;241m.\u001b[39mconfig[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mkey\u001b[39m\u001b[38;5;124m'\u001b[39m], Config\u001b[38;5;241m.\u001b[39mconfig[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msecret\u001b[39m\u001b[38;5;124m'\u001b[39m], Config\u001b[38;5;241m.\u001b[39mconfig[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124murl\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m     10\u001b[0m bbexp \u001b[38;5;241m=\u001b[39m bb\u001b[38;5;241m.\u001b[39mexpiration()\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(bbexp)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Config' is not defined"
      ]
     }
    ],
    "source": [
     "#This cell demonstrates a 2 Legged-Oauth call to Blackboard Learn\n",
-    "import Config\n",
+    "try:\n",
+    "    import Config\n",
+    "except ModuleNotFoundError:\n",
+    "    print(\"Config module not found. Did you copy Config_template.py to Config.py and set values?\")\n",
     "print(\"hello\")\n",
     "from bbrest import BbRest\n",
     "bb = BbRest(Config.config['key'], Config.config['secret'], Config.config['url'])\n",
@@ -113,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "60b99949-ffe9-49ed-a57c-1585c8e53198",
    "metadata": {},
    "outputs": [
@@ -131,9 +142,7 @@
      "text": [
       "\u001b[31m\u001b[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\u001b[0m\n",
       " * Running on http://127.0.0.1:5000\n",
-      "\u001b[33mPress CTRL+C to quit\u001b[0m\n",
-      "127.0.0.1 - - [21/Feb/2024 16:43:15] \"\u001b[33mGET /users HTTP/1.1\u001b[0m\" 404 -\n",
-      "127.0.0.1 - - [21/Feb/2024 16:43:20] \"GET / HTTP/1.1\" 200 -\n"
+      "\u001b[33mPress CTRL+C to quit\u001b[0m\n"
      ]
     }
    ],
@@ -175,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
