--- a/FlaskLearnREST2loOr3lo.ipynb
+++ b/FlaskLearnREST2loOr3lo.ipynb
@@ -27,6 +27,7 @@
     }
    ],
    "source": [
+    "#DELETE THIS AFTER WE HAVE THE OTHER TWO WORKING\n",
     "#This cell demonstrates a simple Flask app that makes a REST call to Learn.\n",
     "from bbrest import BbRest\n",
     "try:\n",
