--- a/LearnREST3LO.ipynb
+++ b/LearnREST3LO.ipynb
@@ -47,7 +47,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "in 58 minutes\n",
       " * Serving Flask app '__main__'\n",
       " * Debug mode: off\n"
      ]
@@ -58,21 +57,19 @@
      "text": [
       "\u001b[31m\u001b[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\u001b[0m\n",
       " * Running on http://127.0.0.1:5000\n",
-      "\u001b[33mPress CTRL+C to quit\u001b[0m\n",
-      "127.0.0.1 - - [27/Feb/2024 16:14:53] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [27/Feb/2024 16:14:53] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n",
-      "127.0.0.1 - - [27/Feb/2024 16:14:59] \"GET /users HTTP/1.1\" 200 -\n"
+      "\u001b[33mPress CTRL+C to quit\u001b[0m\n"
      ]
     }
    ],
    "source": [
-    "# This cell demonstrates a Flask Application that makes 2 Legged-Oauth calls to Blackboard Learn.\n",
+    "# This cell demonstrates a Flask Application that makes 3 Legged-Oauth calls to Blackboard Learn.\n",
     "# Notice how the Config and the import of BbRest to bb in the prior cell are available in this cell.\n",
     "from flask import Flask\n",
     "\n",
-    "bb = BbRest(Config.config['key'], Config.config['secret'], Config.config['url'])\n",
-    "bbexp = bb.expiration()\n",
-    "print(bbexp)\n",
+    "# 1. We DO NOT use key/secret to get an access token.\n",
+    "# bb = BbRest(Config.config['key'], Config.config['secret'], Config.config['url'])\n",
+    "# bbexp = bb.expiration()\n",
+    "# print(bbexp)\n",
     "\n",
     "app = Flask(__name__)\n",
     "\n",
