--- a/LearnREST2LO.ipynb
+++ b/LearnREST2LO.ipynb
@@ -11,11 +11,11 @@
      "output_type": "stream",
      "text": [
       "hello\n",
-      "in 59 minutes\n",
+      "in 53 minutes\n",
       "{'id': '_7_1', 'uuid': '4cdad5559fb84f44beeb889e0093b1c8', 'externalId': 'mkauffman-student', 'dataSourceId': '_2_1', 'userName': 'mkauffman-student', 'studentId': 'mkauffman-student', 'educationLevel': 'Unknown', 'gender': 'Unknown', 'created': '2024-01-09T16:31:34.745Z', 'modified': '2024-02-22T00:45:28.239Z', 'lastLogin': '2024-02-22T00:45:28.238Z', 'institutionRoleIds': ['STUDENT'], 'systemRoleIds': ['User'], 'availability': {'available': 'Yes'}, 'name': {'given': 'Mark (Student)', 'family': 'Kauffman', 'preferredDisplayName': 'GivenName'}, 'contact': {'email': 'markkauffman2000@gmail.com'}, 'avatar': {'viewUrl': 'https://kauffmantest390082.ddns.net/learn/api/public/v1/users/_7_1/avatar', 'source': 'Default'}}\n",
       "\n",
       "\n",
-      "{'id': '_6_1', 'uuid': '038db44f29144f548e1ce2163b533cb0', 'externalId': 'mkauffman', 'dataSourceId': '_2_1', 'userName': 'mkauffman', 'studentId': 'mkauffman', 'educationLevel': 'Unknown', 'gender': 'Unknown', 'created': '2024-01-04T19:00:05.777Z', 'modified': '2024-02-26T18:02:42.136Z', 'lastLogin': '2024-02-26T18:02:42.134Z', 'institutionRoleIds': ['STUDENT'], 'systemRoleIds': ['SystemAdmin'], 'availability': {'available': 'Yes'}, 'name': {'given': 'Mark', 'family': 'Kauffman', 'preferredDisplayName': 'GivenName'}, 'contact': {'email': 'mark.kauffman@anthology.com'}, 'avatar': {'viewUrl': 'https://kauffmantest390082.ddns.net/learn/api/public/v1/users/_6_1/avatar', 'source': 'Default'}}\n"
+      "{'id': '_6_1', 'uuid': '038db44f29144f548e1ce2163b533cb0', 'externalId': 'mkauffman', 'dataSourceId': '_2_1', 'userName': 'mkauffman', 'studentId': 'mkauffman', 'educationLevel': 'Unknown', 'gender': 'Unknown', 'created': '2024-01-04T19:00:05.777Z', 'modified': '2024-03-01T18:30:23.219Z', 'lastLogin': '2024-03-01T18:30:23.218Z', 'institutionRoleIds': ['STUDENT'], 'systemRoleIds': ['SystemAdmin'], 'availability': {'available': 'Yes'}, 'name': {'given': 'Mark', 'family': 'Kauffman', 'preferredDisplayName': 'GivenName'}, 'contact': {'email': 'mark.kauffman@anthology.com'}, 'avatar': {'viewUrl': 'https://kauffmantest390082.ddns.net/learn/api/public/v1/users/_6_1/avatar', 'source': 'Default'}}\n"
      ]
     }
    ],
@@ -47,7 +47,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "in 58 minutes\n",
+      "Current date and time : \n",
+      "2024-03-01 12:33:14\n",
+      "in 53 minutes\n",
       " * Serving Flask app '__main__'\n",
       " * Debug mode: off\n"
      ]
@@ -57,11 +59,11 @@
      "output_type": "stream",
      "text": [
       "\u001b[31m\u001b[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\u001b[0m\n",
-      " * Running on http://127.0.0.1:5000\n",
+      " * Running on http://127.0.0.1:5210\n",
       "\u001b[33mPress CTRL+C to quit\u001b[0m\n",
-      "127.0.0.1 - - [27/Feb/2024 16:14:53] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [27/Feb/2024 16:14:53] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n",
-      "127.0.0.1 - - [27/Feb/2024 16:14:59] \"GET /users HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [01/Mar/2024 12:33:31] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [01/Mar/2024 12:33:31] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n",
+      "127.0.0.1 - - [01/Mar/2024 12:34:06] \"GET /users HTTP/1.1\" 200 -\n"
      ]
     }
    ],
@@ -69,6 +71,27 @@
     "# This cell demonstrates a Flask Application that makes 2 Legged-Oauth calls to Blackboard Learn.\n",
     "# Notice how the Config and the import of BbRest to bb in the prior cell are available in this cell.\n",
     "from flask import Flask\n",
+    "try:\n",
+    "    import Config\n",
+    "except ModuleNotFoundError:\n",
+    "    print(\"Config module not found. Did you copy Config_template.py to Config.py and set values?\")\n",
+    "\n",
+    "from bbrest import BbRest\n",
+    "\n",
+    "# Import the 'datetime' module to work with date and time\n",
+    "import datetime\n",
+    "\n",
+    "# Get the current date and time\n",
+    "now = datetime.datetime.now()\n",
+    "\n",
+    "# Create a datetime object representing the current date and time\n",
+    "\n",
+    "# Display a message indicating what is being printed\n",
+    "print(\"Current date and time : \")\n",
+    "\n",
+    "# Print the current date and time in a specific format\n",
+    "print(now.strftime(\"%Y-%m-%d %H:%M:%S\"))\n",
+    "\n",
     "\n",
     "bb = BbRest(Config.config['key'], Config.config['secret'], Config.config['url'])\n",
     "bbexp = bb.expiration()\n",
@@ -78,7 +101,7 @@
     "\n",
     "@app.route('/')\n",
     "def hello_world():\n",
-    "    return 'Hello, world!'\n",
+    "    return 'Hello there, 2LO world!'\n",
     "\n",
     "@app.route('/users')\n",
     "def users():\n",
@@ -86,7 +109,7 @@
     "    return(r.json())\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    app.run()"
+    "    app.run(port=5210)"
    ]
   },
   {
