--- a/LearnREST3LO.ipynb
+++ b/LearnREST3LO.ipynb
@@ -2,23 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f0d5f304-e278-44c4-be66-6b2071f13354",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello\n",
-      "in 59 minutes\n",
-      "{'id': '_7_1', 'uuid': '4cdad5559fb84f44beeb889e0093b1c8', 'externalId': 'mkauffman-student', 'dataSourceId': '_2_1', 'userName': 'mkauffman-student', 'studentId': 'mkauffman-student', 'educationLevel': 'Unknown', 'gender': 'Unknown', 'created': '2024-01-09T16:31:34.745Z', 'modified': '2024-02-22T00:45:28.239Z', 'lastLogin': '2024-02-22T00:45:28.238Z', 'institutionRoleIds': ['STUDENT'], 'systemRoleIds': ['User'], 'availability': {'available': 'Yes'}, 'name': {'given': 'Mark (Student)', 'family': 'Kauffman', 'preferredDisplayName': 'GivenName'}, 'contact': {'email': 'markkauffman2000@gmail.com'}, 'avatar': {'viewUrl': 'https://kauffmantest390082.ddns.net/learn/api/public/v1/users/_7_1/avatar', 'source': 'Default'}}\n",
-      "\n",
-      "\n",
-      "{'id': '_6_1', 'uuid': '038db44f29144f548e1ce2163b533cb0', 'externalId': 'mkauffman', 'dataSourceId': '_2_1', 'userName': 'mkauffman', 'studentId': 'mkauffman', 'educationLevel': 'Unknown', 'gender': 'Unknown', 'created': '2024-01-04T19:00:05.777Z', 'modified': '2024-02-26T18:02:42.136Z', 'lastLogin': '2024-02-26T18:02:42.134Z', 'institutionRoleIds': ['STUDENT'], 'systemRoleIds': ['SystemAdmin'], 'availability': {'available': 'Yes'}, 'name': {'given': 'Mark', 'family': 'Kauffman', 'preferredDisplayName': 'GivenName'}, 'contact': {'email': 'mark.kauffman@anthology.com'}, 'avatar': {'viewUrl': 'https://kauffmantest390082.ddns.net/learn/api/public/v1/users/_6_1/avatar', 'source': 'Default'}}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#This cell demonstrates a 2 Legged-Oauth call to Blackboard Learn\n",
     "try:\n",
@@ -47,6 +34,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "in 45 minutes\n",
       " * Serving Flask app '__main__'\n",
       " * Debug mode: off\n"
      ]
@@ -56,8 +44,10 @@
      "output_type": "stream",
      "text": [
       "\u001b[31m\u001b[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\u001b[0m\n",
-      " * Running on http://127.0.0.1:5000\n",
-      "\u001b[33mPress CTRL+C to quit\u001b[0m\n"
+      " * Running on http://127.0.0.1:5310\n",
+      "\u001b[33mPress CTRL+C to quit\u001b[0m\n",
+      "127.0.0.1 - - [29/Feb/2024 11:08:27] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [29/Feb/2024 11:08:27] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n"
      ]
     }
    ],
@@ -66,30 +56,36 @@
     "# Notice how the Config and the import of BbRest to bb in the prior cell are available in this cell.\n",
     "from flask import Flask\n",
     "\n",
-    "# 1. We DO NOT use key/secret to get an access token.\n",
-    "# bb = BbRest(Config.config['key'], Config.config['secret'], Config.config['url'])\n",
-    "# bbexp = bb.expiration()\n",
-    "# print(bbexp)\n",
+    "try:\n",
+    "    import Config\n",
+    "except ModuleNotFoundError:\n",
+    "    print(\"Config module not found. Did you copy Config_template.py to Config.py and set values?\")\n",
+    "\n",
+    "\n",
+    "from bbrest import BbRest\n",
+    "bb = BbRest(Config.config['key'], Config.config['secret'], Config.config['url'])\n",
+    "bbexp = bb.expiration()\n",
+    "print(bbexp)\n",
     "\n",
     "app = Flask(__name__)\n",
     "\n",
     "@app.route('/')\n",
     "def hello_world():\n",
-    "    return 'Hello, world!'\n",
+    "    return 'Hello, 3LO world!'\n",
     "\n",
-    "@app.route('/users')\n",
+    "@app.route('/courses')\n",
     "def users():\n",
-    "    r = bb.GetUsers()\n",
+    "    r = bb.GetCourses()\n",
     "    return(r.json())\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    app.run()"
+    "    app.run(port=5310)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92bc09f4-4f96-4db6-a4ba-bcfa07dde499",
+   "id": "ec58dd79-52f7-4ce9-a022-6ae4ecd95dec",
    "metadata": {},
    "outputs": [],
    "source": []
