--- a/FlaskLearnREST2loOr3lo.ipynb
+++ b/FlaskLearnREST2loOr3lo.ipynb
@@ -143,7 +143,8 @@
      "text": [
       "\u001b[31m\u001b[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\u001b[0m\n",
       " * Running on http://127.0.0.1:5000\n",
-      "\u001b[33mPress CTRL+C to quit\u001b[0m\n"
+      "\u001b[33mPress CTRL+C to quit\u001b[0m\n",
+      "127.0.0.1 - - [02/Mar/2024 06:58:12] \"GET / HTTP/1.1\" 200 -\n"
      ]
     }
    ],
