switch to no bbrest and use ports that work with Flack on Mac

--- a/LearnREST2LO.ipynb
+++ b/LearnREST2LO.ipynb
@@ -10,12 +10,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello\n",
-      "in 53 minutes\n",
-      "{'id': '_7_1', 'uuid': '4cdad5559fb84f44beeb889e0093b1c8', 'externalId': 'mkauffman-student', 'dataSourceId': '_2_1', 'userName': 'mkauffman-student', 'studentId': 'mkauffman-student', 'educationLevel': 'Unknown', 'gender': 'Unknown', 'created': '2024-01-09T16:31:34.745Z', 'modified': '2024-02-22T00:45:28.239Z', 'lastLogin': '2024-02-22T00:45:28.238Z', 'institutionRoleIds': ['STUDENT'], 'systemRoleIds': ['User'], 'availability': {'available': 'Yes'}, 'name': {'given': 'Mark (Student)', 'family': 'Kauffman', 'preferredDisplayName': 'GivenName'}, 'contact': {'email': 'markkauffman2000@gmail.com'}, 'avatar': {'viewUrl': 'https://kauffmantest390082.ddns.net/learn/api/public/v1/users/_7_1/avatar', 'source': 'Default'}}\n",
-      "\n",
-      "\n",
-      "{'id': '_6_1', 'uuid': '038db44f29144f548e1ce2163b533cb0', 'externalId': 'mkauffman', 'dataSourceId': '_2_1', 'userName': 'mkauffman', 'studentId': 'mkauffman', 'educationLevel': 'Unknown', 'gender': 'Unknown', 'created': '2024-01-04T19:00:05.777Z', 'modified': '2024-03-01T18:30:23.219Z', 'lastLogin': '2024-03-01T18:30:23.218Z', 'institutionRoleIds': ['STUDENT'], 'systemRoleIds': ['SystemAdmin'], 'availability': {'available': 'Yes'}, 'name': {'given': 'Mark', 'family': 'Kauffman', 'preferredDisplayName': 'GivenName'}, 'contact': {'email': 'mark.kauffman@anthology.com'}, 'avatar': {'viewUrl': 'https://kauffmantest390082.ddns.net/learn/api/public/v1/users/_6_1/avatar', 'source': 'Default'}}\n"
+      "Authentication successful.\n",
+      "Courses fetched successfully.\n",
+      "{'results': [{'id': '_10_1', 'userId': '_13_1', 'courseId': '_11_1', 'dataSourceId': '_2_1', 'created': '2024-03-01T18:32:25.645Z', 'modified': '2024-03-01T18:32:25.645Z', 'availability': {'available': 'Yes'}, 'courseRoleId': 'Student'}]}\n"
      ]
     }
    ],
@@ -25,16 +22,51 @@
     "    import Config\n",
     "except ModuleNotFoundError:\n",
     "    print(\"Config module not found. Did you copy Config_template.py to Config.py and set values?\")\n",
-    "print(\"hello\")\n",
-    "from bbrest import BbRest\n",
-    "bb = BbRest(Config.config['key'], Config.config['secret'], Config.config['url'])\n",
-    "bbexp = bb.expiration()\n",
-    "print(bbexp)\n",
-    "r = bb.GetUser(userId='mkauffman-student')\n",
-    "print (r.json())\n",
-    "print (\"\\n\")\n",
-    "r = await bb.call('GetUser', userId='userName:mkauffman')\n",
-    "print(r.json())"
+    "\n",
+    "import requests\n",
+    "\n",
+    "# Configuration\n",
+    "CLIENT_ID = Config.config['key'] #Learn doc calls this a key\n",
+    "CLIENT_SECRET = Config.config['secret']\n",
+    "BLACKBOARD_DOMAIN = Config.config['domain']\n",
+    "TOKEN_URL = f'https://{BLACKBOARD_DOMAIN}/learn/api/public/v1/oauth2/token'\n",
+    "COURSES_URL = f'https://{BLACKBOARD_DOMAIN}/learn/api/public/v1/users/userName:astudent/courses'  # Replace 'user_id' with actual user identifier\n",
+    "\n",
+    "def get_access_token(client_id, client_secret):\n",
+    "    \"\"\"Authenticate with Blackboard Learn REST API using 2-legged OAuth.\"\"\"\n",
+    "    payload = {\n",
+    "        'grant_type': 'client_credentials',\n",
+    "    }\n",
+    "    response = requests.post(TOKEN_URL, auth=(client_id, client_secret), data=payload)\n",
+    "    response.raise_for_status()  # Raises stored HTTPError, if one occurred.\n",
+    "    \n",
+    "    print(\"Authentication successful.\")\n",
+    "    return response.json().get('access_token')\n",
+    "\n",
+    "def get_user_courses(access_token, courses_url):\n",
+    "    \"\"\"Make a REST API call to get a user's courses.\"\"\"\n",
+    "    headers = {\n",
+    "        'Authorization': f'Bearer {access_token}',\n",
+    "    }\n",
+    "    response = requests.get(courses_url, headers=headers)\n",
+    "    response.raise_for_status()  # Raises stored HTTPError, if one occurred.\n",
+    "    \n",
+    "    return response.json()\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    try:\n",
+    "        # Authenticate and get access token\n",
+    "        access_token = get_access_token(CLIENT_ID, CLIENT_SECRET)\n",
+    "        \n",
+    "        # Use access token to get user's courses\n",
+    "        courses = get_user_courses(access_token, COURSES_URL)\n",
+    "        \n",
+    "        print(\"Courses fetched successfully.\")\n",
+    "        print(courses)  # You might want to format this output or handle it differently depending on your needs\n",
+    "    except requests.exceptions.HTTPError as err:\n",
+    "        print(f\"HTTP error occurred: {err}\")\n",
+    "    except Exception as err:\n",
+    "        print(f\"An error occurred: {err}\")"
    ]
   },
   {
