only using request to make REST calls, not bbrest

--- a/LearnREST2LO.ipynb
+++ b/LearnREST2LO.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "f0d5f304-e278-44c4-be66-6b2071f13354",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
      "text": [
       "Authentication successful.\n",
       "Courses fetched successfully.\n",
-      "{'results': [{'id': '_10_1', 'userId': '_13_1', 'courseId': '_11_1', 'dataSourceId': '_2_1', 'created': '2024-03-01T18:32:25.645Z', 'modified': '2024-03-01T18:32:25.645Z', 'availability': {'available': 'Yes'}, 'courseRoleId': 'Student'}]}\n"
+      "{'id': '_13_1', 'uuid': '8171479077904a37958862a418832489', 'externalId': 'astudent', 'dataSourceId': '_2_1', 'userName': 'astudent', 'studentId': 'astudent', 'educationLevel': 'Unknown', 'gender': 'Unknown', 'created': '2024-03-01T16:28:31.359Z', 'modified': '2024-03-01T16:28:31.359Z', 'institutionRoleIds': ['STUDENT'], 'systemRoleIds': ['User'], 'availability': {'available': 'Yes'}, 'name': {'given': 'A', 'family': 'Student', 'preferredDisplayName': 'GivenName'}, 'contact': {'email': 'astudent@blackboard.com'}, 'avatar': {'viewUrl': 'https://kauffmantest390082.ddns.net/learn/api/public/v1/users/_13_1/avatar', 'source': 'Default'}}\n"
      ]
     }
    ],
@@ -26,29 +26,29 @@
     "import requests\n",
     "\n",
     "# Configuration\n",
-    "CLIENT_ID = Config.config['key'] #Learn doc calls this a key\n",
-    "CLIENT_SECRET = Config.config['secret']\n",
+    "KEY = Config.config['key'] #Learn doc calls this a key. Industry may ref as CLIENT_ID\n",
+    "SECRET = Config.config['secret']\n",
     "BLACKBOARD_DOMAIN = Config.config['domain']\n",
     "TOKEN_URL = f'https://{BLACKBOARD_DOMAIN}/learn/api/public/v1/oauth2/token'\n",
-    "COURSES_URL = f'https://{BLACKBOARD_DOMAIN}/learn/api/public/v1/users/userName:astudent/courses'  # Replace 'user_id' with actual user identifier\n",
+    "USERS_URL = f'https://{BLACKBOARD_DOMAIN}/learn/api/public/v1/users/userName:astudent'\n",
     "\n",
-    "def get_access_token(client_id, client_secret):\n",
+    "def get_access_token(key, secret):\n",
     "    \"\"\"Authenticate with Blackboard Learn REST API using 2-legged OAuth.\"\"\"\n",
     "    payload = {\n",
     "        'grant_type': 'client_credentials',\n",
     "    }\n",
-    "    response = requests.post(TOKEN_URL, auth=(client_id, client_secret), data=payload)\n",
+    "    response = requests.post(TOKEN_URL, auth=(key, secret), data=payload)\n",
     "    response.raise_for_status()  # Raises stored HTTPError, if one occurred.\n",
     "    \n",
     "    print(\"Authentication successful.\")\n",
     "    return response.json().get('access_token')\n",
     "\n",
-    "def get_user_courses(access_token, courses_url):\n",
+    "def get_user(access_token, users_url):\n",
     "    \"\"\"Make a REST API call to get a user's courses.\"\"\"\n",
     "    headers = {\n",
     "        'Authorization': f'Bearer {access_token}',\n",
     "    }\n",
-    "    response = requests.get(courses_url, headers=headers)\n",
+    "    response = requests.get(users_url, headers=headers)\n",
     "    response.raise_for_status()  # Raises stored HTTPError, if one occurred.\n",
     "    \n",
     "    return response.json()\n",
@@ -56,13 +56,13 @@
     "if __name__ == '__main__':\n",
     "    try:\n",
     "        # Authenticate and get access token\n",
-    "        access_token = get_access_token(CLIENT_ID, CLIENT_SECRET)\n",
+    "        access_token = get_access_token(KEY, SECRET)\n",
     "        \n",
     "        # Use access token to get user's courses\n",
-    "        courses = get_user_courses(access_token, COURSES_URL)\n",
+    "        user = get_user(access_token, USERS_URL)\n",
     "        \n",
     "        print(\"Courses fetched successfully.\")\n",
-    "        print(courses)  # You might want to format this output or handle it differently depending on your needs\n",
+    "        print(user)  # You might want to format this output or handle it differently depending on your needs\n",
     "    except requests.exceptions.HTTPError as err:\n",
     "        print(f\"HTTP error occurred: {err}\")\n",
     "    except Exception as err:\n",
@@ -80,8 +80,7 @@
      "output_type": "stream",
      "text": [
       "Current date and time : \n",
-      "2024-03-01 12:33:14\n",
-      "in 53 minutes\n",
+      "2024-03-03 07:31:36\n",
       " * Serving Flask app '__main__'\n",
       " * Debug mode: off\n"
      ]
@@ -93,9 +92,29 @@
       "\u001b[31m\u001b[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\u001b[0m\n",
       " * Running on http://127.0.0.1:5210\n",
       "\u001b[33mPress CTRL+C to quit\u001b[0m\n",
-      "127.0.0.1 - - [01/Mar/2024 12:33:31] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [01/Mar/2024 12:33:31] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n",
-      "127.0.0.1 - - [01/Mar/2024 12:34:06] \"GET /users HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [03/Mar/2024 07:31:55] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [03/Mar/2024 07:31:55] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Authentication successful.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/Mar/2024 07:32:02] \"GET /user HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Courses fetched successfully.\n"
      ]
     }
    ],
@@ -103,42 +122,72 @@
     "# This cell demonstrates a Flask Application that makes 2 Legged-Oauth calls to Blackboard Learn.\n",
     "# Notice how the Config and the import of BbRest to bb in the prior cell are available in this cell.\n",
     "from flask import Flask\n",
+    "#This cell demonstrates a 2 Legged-Oauth call to Blackboard Learn\n",
     "try:\n",
     "    import Config\n",
     "except ModuleNotFoundError:\n",
     "    print(\"Config module not found. Did you copy Config_template.py to Config.py and set values?\")\n",
     "\n",
-    "from bbrest import BbRest\n",
+    "import requests\n",
+    "\n",
+    "# Configuration\n",
+    "KEY = Config.config['key'] #Learn doc calls this a key. Industry may ref as CLIENT_ID\n",
+    "SECRET = Config.config['secret']\n",
+    "BLACKBOARD_DOMAIN = Config.config['domain']\n",
+    "TOKEN_URL = f'https://{BLACKBOARD_DOMAIN}/learn/api/public/v1/oauth2/token'\n",
+    "USERS_URL = f'https://{BLACKBOARD_DOMAIN}/learn/api/public/v1/users/userName:astudent'\n",
     "\n",
     "# Import the 'datetime' module to work with date and time\n",
     "import datetime\n",
-    "\n",
     "# Get the current date and time\n",
     "now = datetime.datetime.now()\n",
-    "\n",
     "# Create a datetime object representing the current date and time\n",
-    "\n",
     "# Display a message indicating what is being printed\n",
     "print(\"Current date and time : \")\n",
-    "\n",
     "# Print the current date and time in a specific format\n",
     "print(now.strftime(\"%Y-%m-%d %H:%M:%S\"))\n",
     "\n",
+    "def get_access_token(key, secret):\n",
+    "    \"\"\"Authenticate with Blackboard Learn REST API using 2-legged OAuth.\"\"\"\n",
+    "    payload = {\n",
+    "        'grant_type': 'client_credentials',\n",
+    "    }\n",
+    "    response = requests.post(TOKEN_URL, auth=(key, secret), data=payload)\n",
+    "    response.raise_for_status()  # Raises stored HTTPError, if one occurred.\n",
+    "    \n",
+    "    print(\"Authentication successful.\")\n",
+    "    return response.json().get('access_token')\n",
     "\n",
-    "bb = BbRest(Config.config['key'], Config.config['secret'], Config.config['url'])\n",
-    "bbexp = bb.expiration()\n",
-    "print(bbexp)\n",
-    "\n",
+    "def get_user(access_token, users_url):\n",
+    "    \"\"\"Make a REST API call to get a user's courses.\"\"\"\n",
+    "    headers = {\n",
+    "        'Authorization': f'Bearer {access_token}',\n",
+    "    }\n",
+    "    response = requests.get(users_url, headers=headers)\n",
+    "    response.raise_for_status()  # Raises stored HTTPError, if one occurred.\n",
+    "    \n",
+    "    return response.json()\n",
     "app = Flask(__name__)\n",
     "\n",
     "@app.route('/')\n",
     "def hello_world():\n",
     "    return 'Hello there, 2LO world!'\n",
     "\n",
-    "@app.route('/users')\n",
-    "def users():\n",
-    "    r = bb.GetUsers()\n",
-    "    return(r.json())\n",
+    "@app.route('/user')\n",
+    "def user():\n",
+    "    try:\n",
+    "        # Authenticate and get access token\n",
+    "        access_token = get_access_token(KEY, SECRET)\n",
+    "        \n",
+    "        # Use access token to get user's courses\n",
+    "        user = get_user(access_token, USERS_URL)\n",
+    "        \n",
+    "        print(\"Courses fetched successfully.\")\n",
+    "        return(user)  # You might want to format this output or handle it differently depending on your needs\n",
+    "    except requests.exceptions.HTTPError as err:\n",
+    "        print(f\"HTTP error occurred: {err}\")\n",
+    "    except Exception as err:\n",
+    "        print(f\"An error occurred: {err}\")\n",
     "\n",
     "if __name__ == '__main__':\n",
     "    app.run(port=5210)"
