cleanup of 2LO. no prior cell output shown

--- a/LearnREST2LO.ipynb
+++ b/LearnREST2LO.ipynb
@@ -2,20 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f0d5f304-e278-44c4-be66-6b2071f13354",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Authentication successful.\n",
-      "Courses fetched successfully.\n",
-      "{'id': '_13_1', 'uuid': '8171479077904a37958862a418832489', 'externalId': 'astudent', 'dataSourceId': '_2_1', 'userName': 'astudent', 'studentId': 'astudent', 'educationLevel': 'Unknown', 'gender': 'Unknown', 'created': '2024-03-01T16:28:31.359Z', 'modified': '2024-03-01T16:28:31.359Z', 'institutionRoleIds': ['STUDENT'], 'systemRoleIds': ['User'], 'availability': {'available': 'Yes'}, 'name': {'given': 'A', 'family': 'Student', 'preferredDisplayName': 'GivenName'}, 'contact': {'email': 'astudent@blackboard.com'}, 'avatar': {'viewUrl': 'https://kauffmantest390082.ddns.net/learn/api/public/v1/users/_13_1/avatar', 'source': 'Default'}}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#This cell demonstrates a 2 Legged-Oauth call to Blackboard Learn\n",
     "try:\n",
@@ -61,7 +51,7 @@
     "        # Use access token to get user's courses\n",
     "        user = get_user(access_token, USERS_URL)\n",
     "        \n",
-    "        print(\"Courses fetched successfully.\")\n",
+    "        print(\"User fetched successfully.\")\n",
     "        print(user)  # You might want to format this output or handle it differently depending on your needs\n",
     "    except requests.exceptions.HTTPError as err:\n",
     "        print(f\"HTTP error occurred: {err}\")\n",
@@ -74,53 +64,12 @@
    "execution_count": null,
    "id": "ccdc4877-4853-4543-b581-8f68b43a3c93",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Current date and time : \n",
-      "2024-03-03 07:31:36\n",
-      " * Serving Flask app '__main__'\n",
-      " * Debug mode: off\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[31m\u001b[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\u001b[0m\n",
-      " * Running on http://127.0.0.1:5210\n",
-      "\u001b[33mPress CTRL+C to quit\u001b[0m\n",
-      "127.0.0.1 - - [03/Mar/2024 07:31:55] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [03/Mar/2024 07:31:55] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Authentication successful.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/Mar/2024 07:32:02] \"GET /user HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Courses fetched successfully.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# This cell demonstrates a Flask Application that makes 2 Legged-Oauth calls to Blackboard Learn.\n",
-    "# Notice how the Config and the import of BbRest to bb in the prior cell are available in this cell.\n",
+    "# \n",
+    "# This cell demonstrates a simple Flask Application that makes 2 Legged-Oauth calls to Blackboard Learn.\n",
+    "# This is meant for demonstration purposes only. To be complete you would cache the access token,\n",
+    "# and have session management for each user that is using the web application.\n",
     "from flask import Flask\n",
     "#This cell demonstrates a 2 Legged-Oauth call to Blackboard Learn\n",
     "try:\n",
@@ -182,7 +131,7 @@
     "        # Use access token to get user's courses\n",
     "        user = get_user(access_token, USERS_URL)\n",
     "        \n",
-    "        print(\"Courses fetched successfully.\")\n",
+    "        print(\"User fetched successfully.\")\n",
     "        return(user)  # You might want to format this output or handle it differently depending on your needs\n",
     "    except requests.exceptions.HTTPError as err:\n",
     "        print(f\"HTTP error occurred: {err}\")\n",
@@ -192,14 +141,6 @@
     "if __name__ == '__main__':\n",
     "    app.run(port=5210)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "92bc09f4-4f96-4db6-a4ba-bcfa07dde499",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
